Spacing Issue Fix
- Fixed spacing issue on about page mobile.

--- a/wp-content/themes/portfolio-theme/assets/css/main.css
+++ b/wp-content/themes/portfolio-theme/assets/css/main.css
@@ -942,6 +942,12 @@ textarea:hover {
   margin-bottom: 20%;
 }
 
+@media only screen and (max-width: 767px) {
+  .about-content--left p:last-child {
+    margin-bottom: 5%;
+  }
+}
+
 .about-content--right {
   float: right;
   height: 100%;
