--- a/wp-content/themes/portfolio-theme/assets/sass/pages/_about-page.scss
+++ b/wp-content/themes/portfolio-theme/assets/sass/pages/_about-page.scss
@@ -24,7 +24,7 @@
     float: none;
     margin-right: 0;
     width: 100%;
-   }
+  }
 
   img {
     display: block;
@@ -37,6 +37,10 @@
 
     &:last-child {
       margin-bottom: 20%;
+
+      @include mq('tablet', max) {
+        margin-bottom: 5%;
+      }
     }
   }
 }
